ebusd - ChangeLog
-----------------

2014-10-03  Roland Jax  <roland.jax@liwest.at>
* class Logger: minor name changes.
* class CYCData: delCommands fixed.
* class BaseLoop: config option added. (config reload implemented)

2014-10-02  Roland Jax  <roland.jax@liwest.at>
* class Network splitted into classes Network and Connection.
* class Message separated from class BaseLoop.
* global Objects (network, commands, ebusloop, cycdata) relocated into
  new global Object baseloop.
* class BaseLoop: log option reworked (logarea -> logareas; loglevel -> log level).

2014-06-26  Roland Jax  <roland.jax@liwest.at>
* ebusdump merged into ebusctl.

2014-06-25  Roland Jax  <roland.jax@liwest.at>
* ebusctl added (includes ebusd_scan and ebusd_send)
* Version changed from 0.2.1 to 0.3.0

2014-06-22  Roland Jax  <roland.jax@liwest.at>
* 'stop' daemon command added.

2014-06-03  Roland Jax  <roland.jax@liwest.at>
* ebusd_send, ebusd_scan added.
* class Appl: program arguments parsing improved.
* directories utils->lib and tools->tool renamed.
* Version changed from 0.2.0 to 0.2.1

2014-05-11  Roland Jax  <roland.jax@liwest.at>
* ebus-daemon merged into ebusd.

2014-05-11  Roland Jax  <roland.jax@liwest.at>
* Beta-Test for ebus-daemon started.

2014-01-09  Roland Jax  <roland.jax@liwest.at>
* Initial commit.

---

2014-03-16:
* Specific vaillant data type "ttm" (time table minutes) added.
  (thx hendrikw / KNX Forum)

2014-02-21:
* fix crash: Create a local copy of the <host:port> string. (thx Hannes Gredler)
* Some cosmetic changes.

2014-02-20:
* Missing void declarations in various function parameter added.
* New branch "socket" created.
* Improved ebus device handling to use tcp based device too.

2014-01-22:
* autogen.sh modified.

2014-01-05:
* Missing daemon option -n (nodevicecheck) fixed.

2013-12-07:
* Vaillant configuration files for VWx Heat Pumps added.

2013-12-04:
* Vaillant configuration files for VR 60/3 added.
* Vaillant configuration files for VR 90/3 changed.